buy now button spacing bug

--- a/site_overrides.less
+++ b/site_overrides.less
@@ -198,7 +198,7 @@ footer .mail {
 
 .album-caption {
     color: @gray-lighter;
-    margin: 10px 1%;
+    margin: 1px 1%;
     font-size: large;
 }
 
@@ -206,9 +206,10 @@ footer .mail {
 }
 
 .buy-now-container {
+    padding: 2px 1%;
+    margin: 30px 1%;
     display: flex;
     justify-content: center;
-    align-items: center;
     // buttons
     a {
         margin: 0 1%;
